Fixing Card Height
Card Height was off screen, issue should be fixed.

--- a/main.css
+++ b/main.css
@@ -104,26 +104,26 @@ img {
   }
   @media  screen and (max-width:725px) {
     .card {
-        width: 20em;
-        height: 47em;
+        width: 18em;
+        height: 40em;
     }
     img {
-        height:33.6%;
+        height:33%;
         width: 100%;
         border-top-right-radius: 5px;
         border-top-left-radius: 5px;
         border-bottom-right-radius: 0em;
     }
     .color {
-        width:20em;
-        height: 15.8em;
+        width:18em;
+        height: 13.2em;
         border-top-left-radius: 5px;
         border-bottom-right-radius: 0em;
     }
     h1 {
         text-align: center;
         margin-left:0;
-        margin-top: 11em;
+        margin-top: 9.3em;
     }
     .show-desktop {
         display:none;
@@ -144,7 +144,7 @@ img {
         font-weight: 600;
         line-height: 1em;
         text-align: center;
-        margin-top: 1.3em;
+        margin-top: .5em;
     }
     .stats1 span {
         font-family: Inter;
